* Fixed Bug #13690: getRecursive does not work because of '.' and '..' directories
* Fixed Bug #13114: Error check in $FTP->getRecursive(...)
* Implemented Request #13104: connect() <> $this->handle in login()
* Fixed Bug #13917: putRecursive always return PEAR::Error
* Fixed Bug #13850: inclusion of Net/FTP.php in tests doesn't always work

1.4.0a1 - 2007-12-22
* Fixed bug #6754: Add method to set directory list matcher explicitly
* Fixed Bug #7102: Add ability to disable use of ftp_nb_put(), can sometimes be very slow

* Improved detection of remote directories. It is slower than before, but does not
rely on simply detecting if the given path ends with a slash.

1.3.7 - ????-??-??
* Fixed Bug #13917: putRecursive always return PEAR::Error
* Fixed Bug #13850: inclusion of Net/FTP.php in tests doesn't always work

1.3.6 - 2008-05-06
* Fixed Bug #13496: set bit not supported
* Fixed Bug #13689: . in file owner or group name breaks _ls_match
* Fixed Bug #13690: getRecursive does not work because of '.' and '..' directories
* Fixed Bug #13114: Error check in $FTP->getRecursive(...)

1.3.5 - 2008-01-13
* Fixed Bug #12840: Fix compliance with PHP 4 (broken since 1.3.3)

1.3.4 - 2007-12-10
* Fixed Bug #12639: _constructPath() prevents _checkDir() from working correctly

1.3.3 - 2007-12-06
* Fixed Bug #7146: Recursive mkdir() broken on Windows
* Fixed Bug #7270: Recursive rmdir() broken
* Fixed Bug #7527: ls fails if there are no files and a total line
* Fixed Bug #8102: Loading file extension and checking extension gives binary for ascii files
* Fixed Bug #9611: (, ? and ) break detection of the unix platform
* Fixed Bug #10237: put() doesn't run ftp_alloc to allocate space
* PEAR Coding Style Valid
* Removed package.xml version 1.0

1.3.2 - 2006-02-11
* Fixed Bug #4102: Problem detecting os method ls().
* Fixed Bug #5337: _list_and_parse behavior with an empty remote directory.
* Fixed Bug #4836: Off-by-one error in regex for Windows directory listings.