@@ -63,7 +63,9 @@ $current_notes =
 * Fixed Bug #13114: Error check in $FTP->getRecursive(...)
 * Implemented Request #13104: connect() <> $this->handle in login()
 * Fixed Bug #13917: putRecursive always return PEAR::Error
-* Fixed Bug #13850: inclusion of Net/FTP.php in tests doesn\'t always work';
+* Fixed Bug #13850: inclusion of Net/FTP.php in tests doesn\'t always work
+* Implemented Request #2271: New flag for _rm_dir_recursive to leave directory '.
+'structure intact';
 
 PEAR::setErrorHandling(PEAR_ERROR_CALLBACK, 'dumpError');
 
