@@ -6,6 +6,7 @@
 * Implemented Request #13104: connect() <> $this->handle in login()
 * Fixed Bug #13917: putRecursive always return PEAR::Error
 * Fixed Bug #13850: inclusion of Net/FTP.php in tests doesn't always work
+* Implemented Request #2271: New flag for _rm_dir_recursive to leave directory structure intact
 
 1.4.0a1 - 2007-12-22
 * Fixed bug #6754: Add method to set directory list matcher explicitly
